[gd_scene load_steps=20 format=2]

[ext_resource path="res://eliza_font_main.tres" type="DynamicFont" id=1]
[ext_resource path="res://Art/exit.png" type="Texture" id=2]
[ext_resource path="res://Art/Eliza Character Parts/base.png" type="Texture" id=3]
[ext_resource path="res://Art/Eliza Character Parts/eyebrows.png" type="Texture" id=4]
[ext_resource path="res://Art/Eliza Character Parts/Eyes/eyes_open.png" type="Texture" id=5]
[ext_resource path="res://Art/Eliza_BG.png" type="Texture" id=6]
[ext_resource path="res://Art/Eliza Character Parts/Mouths/mouth_smile_closed.png" type="Texture" id=7]
[ext_resource path="res://Art/Eliza Character Parts/nose.png" type="Texture" id=8]
[ext_resource path="res://UserInputText.gd" type="Script" id=9]
[ext_resource path="res://GameContainer.gd" type="Script" id=10]
[ext_resource path="res://new_gradienttexture2d.tres" type="Texture" id=11]
[ext_resource path="res://ElizaCharacter.gd" type="Script" id=12]
[ext_resource path="res://MainDialogContainer.py" type="Script" id=13]
[ext_resource path="res://InputBoxController.gd" type="Script" id=14]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 140, 140 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 40.0

[sub_resource type="StyleBoxEmpty" id=4]

[node name="GameContainer" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="MainDialogContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainDialogContainer"]
margin_right = 1192.0
margin_bottom = 800.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MainDialogContainer/VBoxContainer"]
margin_right = 1192.0
margin_bottom = 396.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="ElizaArea" type="ReferenceRect" parent="MainDialogContainer/VBoxContainer/TopRow"]
margin_right = 1192.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="ElizaCharacter" type="PanelContainer" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea"]
anchor_left = 0.75
anchor_top = 1.0
anchor_right = 0.75
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 250, 250 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 12 )

[node name="BaseTexture" type="TextureRect" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea/ElizaCharacter"]
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="EyebrowsTexture" type="TextureRect" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea/ElizaCharacter"]
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="EyesTexture" type="TextureRect" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea/ElizaCharacter"]
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="NoseTexture" type="TextureRect" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea/ElizaCharacter"]
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MouthTexture" type="TextureRect" parent="MainDialogContainer/VBoxContainer/TopRow/ElizaArea/ElizaCharacter"]
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="MiddleRow" type="PanelContainer" parent="MainDialogContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 1192.0
margin_bottom = 697.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ElizaResponseArea" type="ReferenceRect" parent="MainDialogContainer/VBoxContainer/MiddleRow"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1185.0
margin_bottom = 290.0

[node name="ElizaDialogBox" type="TextureRect" parent="MainDialogContainer/VBoxContainer/MiddleRow/ElizaResponseArea"]
anchor_bottom = 1.0
margin_right = 1178.0
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="ElizaText" type="Label" parent="MainDialogContainer/VBoxContainer/MiddleRow/ElizaResponseArea/ElizaDialogBox"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1060.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0.00784314, 0.211765, 0.917647, 1 )
custom_fonts/font = ExtResource( 1 )
text = "This is some example text. Yay I'm so happy about this information! "
autowrap = true

[node name="BottomRow" type="PanelContainer" parent="MainDialogContainer/VBoxContainer"]
margin_top = 701.0
margin_right = 1192.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="InputArea" type="ReferenceRect" parent="MainDialogContainer/VBoxContainer/BottomRow"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1185.0
margin_bottom = 92.0

[node name="UserDialogBox" type="TextureRect" parent="MainDialogContainer/VBoxContainer/BottomRow/InputArea"]
margin_right = 1178.0
margin_bottom = 85.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="UserInputBox" type="PanelContainer" parent="MainDialogContainer/VBoxContainer/BottomRow/InputArea/UserDialogBox"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -19.0
margin_right = -30.0
margin_bottom = 19.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 14 )

[node name="UserInputText" type="LineEdit" parent="MainDialogContainer/VBoxContainer/BottomRow/InputArea/UserDialogBox/UserInputBox"]
margin_right = 1118.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 5 )
text = "Input text"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 9 )

[node name="Input Symbol" type="Label" parent="MainDialogContainer/VBoxContainer/BottomRow/InputArea/UserDialogBox/UserInputBox/UserInputText"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -18.0
margin_right = 30.12
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = ">"
valign = 1

[node name="Quit" type="Button" parent="."]
anchor_left = 0.99
anchor_right = 1.0
margin_left = -45.0
margin_top = 15.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
size_flags_horizontal = 11
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 2 )
expand_icon = true

[connection signal="gui_input" from="MainDialogContainer/VBoxContainer/BottomRow/InputArea/UserDialogBox/UserInputBox/UserInputText" to="MainDialogContainer/VBoxContainer/BottomRow/InputArea/UserDialogBox/UserInputBox/UserInputText" method="_gui_input"]
